<resources>
    <string name="app_name">Brick Game</string>
    <string name="score_text">SCORE</string>
    <string name="game_title" translatable="false">BRICK GAME</string>
    <string name="new_game">NEW GAME</string>
    <string name="scores_text">scores</string>
    <string name="scores">SCORES</string>
    <string name="initial_score" translatable="false">0</string>
    <string name="next">NEXT</string>
    <string name="new_score_notification_title">New score</string>
    <string name="congrats_sub_title">Congrats! You\'ve reached a new score</string>
    <string name="game_over_text">GAME OVER</string>

    <!--settings-->
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="feedback_title">Write to developer</string>
    <string name="rate_title">Rate on Google Play</string>
    <string name="other_title">Other</string>
    <string name="set_figures_speed_title">Bricks\' speed</string>
    <string name="pick_figures_colour_title">Bricks\' color</string>
    <string name="general_title">General</string>
    <string name="settings_title">Settings</string>
    <string name="default_figure_speed_text">Default</string>
    <string name="very_fast_figure_speed_text">Very fast</string>
    <string name="fast_figure_speed_text">Fast</string>
    <string name="slow_figure_speed_text">Slow</string>
    <string name="very_slow_figure_speed_text">Very slow</string>
    <string name="show_vertical_hints_title">Enable vertical hints</string>
    <string name="cannot_send_email_error_text">Cannot send email</string>
    <string name="cannot_open_market_error_text">Unable to open Play Market app</string>
    <string name="set_squares_count_in_row_title">Squares count in a row</string>
    <string name="share_via_text">Share via</string>
    <string name="share_body_part_one">"I challenge you to beat my highest score - "</string>
    <string name="share_body_part_second">in Brick Game. Cheers!</string>
    <string name="content_description_rotate" translatable="false">Rotate</string>
    <string name="content_description_move_down" translatable="false">Move down</string>
    <string name="content_description_pause_or_resume_game" translatable="false">Pause or resume game</string>
    <string name="more_apps_title">More apps</string>
</resources>
